Fix phieu nhap API
