# core/entity/phieu_nhap.go
@@ -9,14 +9,14 @@ type PhieuNhap struct {
 	CtPhieuNhap []*CtPhieuNhap
 }
 
-func NewPhieuNhap(ngayNhap *time.Time) *PhieuNhap {
+func NewPhieuNhap(ngayNhap *time.Time, tongTien uint, ctPhieuNhap []*CtPhieuNhap) *PhieuNhap {
 	newId := NewID()
 
 	return &PhieuNhap{
 		MaPhieuNhap: &newId,
 		NgayLap:     ngayNhap,
-		TongTien:    0,
-		CtPhieuNhap: nil,
+		TongTien:    tongTien,
+		CtPhieuNhap: ctPhieuNhap,
 	}
 }
 
